# momoring

./: .env.example  .pre-commit-config.yaml
backend/: .gitignore  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  errors.py  main.py  schemas.py
backend/app/adapters/: base.py  claude_provider.py  mock.py  openai_provider.py  openai_stt_provider.py  openai_tts_provider.py
backend/app/db/: engine.py  models.py  session_store.py
backend/app/services/: logging_config.py  metrics.py  orchestrator.py  prompt_builder.py  provider_factory.py  provider_router.py  resilience.py  safety.py  session_runtime.py  session_store.py
backend/scripts/: bench_p95.py  smoke_real.py
backend/static/: demo.html
backend/tests/: test_api.py  test_api_flow.py  test_db_session_store.py  test_logging_config.py  test_metrics.py  test_metrics_endpoint.py  test_orchestrator.py  test_pilot_scenarios.py  test_prompt_builder.py  test_provider_factory.py  test_provider_router.py  test_resilience.py  test_safety_service.py  test_session_runtime.py  test_session_store.py  test_ws_flow.py
docs/: CODEX_EXECUTION_PLAN.md  CODEX_QUALITY_PATCH_PLAN.md
frontend/: next.config.ts  package-lock.json  package.json
qa/: fr_traceability_matrix.md  inline_comment_resolution_plan.md  nfr_checklist.md  priority_list.md
requirements/: mvp_requirements.md  mvp_technical_design.md
roadmaps/: 01A_vendor_proposal_review_plan.md  01_product_vision_and_principles.md  README.md  (+5 more)
(+19 files in other folders)
